@@ -42,6 +42,10 @@ class RendererSVG(RendererBase):
         self.width=width
         self.height=height
         self._svgwriter = svgwriter
+        if rcParams['path.simplify']:
+            self.simplify = (width, height)
+        else:
+            self.simplify = None
 
         self._groupd = {}
         if not rcParams['svg.image_inline']:
@@ -165,14 +169,14 @@ class RendererSVG(RendererBase):
                 .scale(1.0, -1.0)
                 .translate(0.0, self.height))
 
-    def _convert_path(self, path, transform):
+    def _convert_path(self, path, transform, simplify=None):
         tpath = transform.transform_path(path)
 
         path_data = []
         appender = path_data.append
         path_commands = self._path_commands
         currpos = 0
-        for points, code in tpath.iter_segments():
+        for points, code in tpath.iter_segments(simplify):
             if code == Path.CLOSEPOLY:
                 segment = 'z'
             else:
@@ -187,7 +191,7 @@ class RendererSVG(RendererBase):
 
     def draw_path(self, gc, path, transform, rgbFace=None):
         trans_and_flip = self._make_flip_transform(transform)
-        path_data = self._convert_path(path, trans_and_flip)
+        path_data = self._convert_path(path, trans_and_flip, self.simplify)
         self._draw_svg_element('path', 'd="%s"' % path_data, gc, rgbFace)
 
     def draw_markers(self, gc, marker_path, marker_trans, path, trans, rgbFace=None):
