@@ -270,6 +270,8 @@ numerix      : %(numerix)s  # numpy, Numeric or numarray
 #contour.negative_linestyle :  dashed # dashed | solid
 
 ### SAVING FIGURES
+#path.simplify : False  # When True, simplify paths in vector backends, such as PDF, PS and SVG
+
 # the default savefig params can be different for the GUI backends.
 # Eg, you may want a higher resolution, or to make the figure
 # background white
